--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>belajar git</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, iure sequi enim vitae mollitia blanditiis dolorem atque quibusdam ea rem maxime soluta temporibus. Ea accusantium sunt dignissimos libero unde veniam.</p>
 </body>
 </html>
